[YPTF-259]: change text for Jim request.

--- a/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
+++ b/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
@@ -87,6 +87,6 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact to admin if you require assistance."|t }}</p>
+    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact the FFW team if you require assistance."|t }}</p>
   {% endif %}
 </div>
