[YLI-150]: Styling of main menu.

--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -29,16 +29,76 @@ header {
         padding: 5px 0 13px;
       }
     }
+
     #block-openy-lily-main-menu {
       width: 100%;
       background: rgba(0, 96, 175, 0.95) !important;
+      padding: 0 30px;
+      @include breakpoint($desktop) {
+        padding: 0 100px;
+      }
       ul {
         float: none;
         li {
           a {
+            font-size: 17px;
             color: white;
             padding: 21px 25px;
-            @include transition(padding 0.2s ease);
+            @include transition(all 0.2s ease);
+            &.expanded-menu + .dropdown-menu {
+              display: block;
+            }
+            @media screen and (max-width: 1199px) {
+              font-size: 15px;
+            }
+          }
+
+          &.nav-level-2 {
+            float: none;
+            display: table-cell;
+            width: 1%;
+            min-width: 11%;
+            > a {
+              padding: 21px 5px;
+              i {
+                font-size: 12px;
+                margin-left: 5px;
+              }
+              &.expanded-menu,
+              &:hover {
+                background: rgba(255,255,255,0.18);
+              }
+            }
+          }
+          &.nav-level-3 {
+            float: none;
+          }
+        }
+        &.nav-level-1 {
+          text-align: center;
+        }
+        &.row-level-2 {
+          background: rgba(255,255,255,0.98);
+          padding-top: 14px;
+          padding-bottom: 14px;
+          border: 1px solid rgba(0,0,0,0.15);
+          box-shadow: none;
+          border-radius: 0;
+          li {
+            width: 100%;
+            padding: 0;
+            a {
+              display: block;
+              font-size: 18px;
+              padding: 10px 28px;
+              text-overflow: initial;
+              white-space: normal;
+              color: #7d7b7b;
+              &:hover {
+                background: none;
+                color: #7d7b7b;
+              }
+            }
           }
         }
       }
@@ -93,9 +153,9 @@ header {
         }
       }
       #block-openy-lily-main-menu {
-        li {
-          a {
-            padding: 16px 25px;
+        .nav-level-2 {
+          > a {
+            padding: 16px 5px;
           }
         }
       }
