--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -82,18 +82,79 @@ header .top-navs .nav-global .navbar-header {
 header .top-navs #block-openy-lily-main-menu {
   width: 100%;
   background: rgba(0, 96, 175, 0.95) !important;
+  padding: 0 30px;
+}
+@media (min-width: 75em) {
+  header .top-navs #block-openy-lily-main-menu {
+    padding: 0 100px;
+  }
 }
 header .top-navs #block-openy-lily-main-menu ul {
   float: none;
 }
 header .top-navs #block-openy-lily-main-menu ul li a {
+  font-size: 17px;
   color: white;
   padding: 21px 25px;
-  -webkit-transition: padding 0.2s ease;
-  -moz-transition: padding 0.2s ease;
-  -ms-transition: padding 0.2s ease;
-  -o-transition: padding 0.2s ease;
-  transition: padding 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+header .top-navs #block-openy-lily-main-menu ul li a.expanded-menu + .dropdown-menu {
+  display: block;
+}
+@media screen and (max-width: 1199px) {
+  header .top-navs #block-openy-lily-main-menu ul li a {
+    font-size: 15px;
+  }
+}
+header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 {
+  float: none;
+  display: table-cell;
+  width: 1%;
+  min-width: 11%;
+}
+header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a {
+  padding: 21px 5px;
+}
+header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a i {
+  font-size: 12px;
+  margin-left: 5px;
+}
+header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a.expanded-menu, header .top-navs #block-openy-lily-main-menu ul li.nav-level-2 > a:hover {
+  background: rgba(255, 255, 255, 0.18);
+}
+header .top-navs #block-openy-lily-main-menu ul li.nav-level-3 {
+  float: none;
+}
+header .top-navs #block-openy-lily-main-menu ul.nav-level-1 {
+  text-align: center;
+}
+header .top-navs #block-openy-lily-main-menu ul.row-level-2 {
+  background: rgba(255, 255, 255, 0.98);
+  padding-top: 14px;
+  padding-bottom: 14px;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  box-shadow: none;
+  border-radius: 0;
+}
+header .top-navs #block-openy-lily-main-menu ul.row-level-2 li {
+  width: 100%;
+  padding: 0;
+}
+header .top-navs #block-openy-lily-main-menu ul.row-level-2 li a {
+  display: block;
+  font-size: 18px;
+  padding: 10px 28px;
+  text-overflow: initial;
+  white-space: normal;
+  color: #7d7b7b;
+}
+header .top-navs #block-openy-lily-main-menu ul.row-level-2 li a:hover {
+  background: none;
+  color: #7d7b7b;
 }
 header .top-navs #block-anonymoususersmenu li a,
 header .top-navs #block-openy-lily-user-menu li a {
@@ -132,8 +193,8 @@ header.tiny .top-navs #block-anonymoususersmenu li a,
 header.tiny .top-navs #block-openy-lily-user-menu li a {
   line-height: 19px;
 }
-header.tiny .top-navs #block-openy-lily-main-menu li a {
-  padding: 16px 25px;
+header.tiny .top-navs #block-openy-lily-main-menu .nav-level-2 > a {
+  padding: 16px 5px;
 }
 header.expanded-search {
   top: 88px;
@@ -2984,6 +3045,36 @@ body.node--type-location #groupex-full-form-wrapper #date-select-wrapper {
 }
 .template_youth_sports_overview .file a {
   color: inherit;
+}
+
+#main.expanded-menu {
+  -webkit-filter: blur(5px);
+  -ms-filter: blur(5px);
+  -moz-filter: blur(5px);
+}
+#main.expanded-menu:before {
+  background-color: rgba(255, 255, 255, 0.8);
+  visibility: visible;
+  -webkit-transition-delay: 0s;
+  -moz-transition-delay: 0s;
+  -ms-transition-delay: 0s;
+}
+#main:before {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 32;
+  display: block;
+  visibility: hidden;
+  background: transparent;
+  content: '';
+  -webkit-transition: background-color .3s ease-out,visibility 0s .3s linear;
+  -moz-transition: background-color .3s ease-out,visibility 0s .3s linear;
+  -ms-transition: background-color .3s ease-out,visibility 0s .3s linear;
+  -o-transition: background-color .3s ease-out,visibility 0s .3s linear;
+  transition: background-color .3s ease-out,visibility 0s .3s linear;
 }
 
 a.tel-link {
