--- a/openy_lily/sass/misc/_templates.scss
+++ b/openy_lily/sass/misc/_templates.scss
@@ -227,7 +227,37 @@
   }
 }
 
-
+#main {
+  &.expanded-menu {
+    -webkit-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -moz-filter: blur(5px);
+    &:before {
+      background-color: rgba(255,255,255,0.8);
+      visibility: visible;
+      -webkit-transition-delay: 0s;
+      -moz-transition-delay: 0s;
+      -ms-transition-delay: 0s;
+    }
+  }
+  &:before {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 32;
+    display: block;
+    visibility: hidden;
+    background: transparent;
+    content: '';
+    -webkit-transition: background-color .3s ease-out,visibility 0s .3s linear;
+    -moz-transition: background-color .3s ease-out,visibility 0s .3s linear;
+    -ms-transition: background-color .3s ease-out,visibility 0s .3s linear;
+    -o-transition: background-color .3s ease-out,visibility 0s .3s linear;
+    transition: background-color .3s ease-out,visibility 0s .3s linear;
+  }
+}
 
 a.tel-link {
   color: $blue1;
