--- a/css/docs.css
+++ b/css/docs.css
@@ -796,6 +796,7 @@ h1[id] {
   border-color: #e5e5e5 #eee #eee;
   border-style: solid;
   border-width: 1px 0;
+  -webkit-box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.05); }
 
 /* Echo out a label for the example */
@@ -829,6 +830,7 @@ h1[id] {
     border-color: #ddd;
     border-width: 1px;
     border-radius: 4px 4px 0 0;
+    -webkit-box-shadow: none;
     box-shadow: none; }
   .bs-example + .highlight,
   .bs-example + .zero-clipboard + .highlight {
@@ -1271,6 +1273,7 @@ h1[id] {
   color: #fff;
   background-color: #d9534f;
   border-bottom: 1px solid #b94441;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25); }
 
 .bs-customizer-alert .close {
@@ -1288,6 +1291,7 @@ h1[id] {
   color: #fff;
   background-color: #a83c3a;
   border-color: #973634;
+  -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05), 0 1px 0 rgba(255, 255, 255, 0.1); }
 
 .bs-dropzone {
@@ -1448,6 +1452,7 @@ h1[id] {
   outline: 0;
   outline: thin dotted \9;
   /* IE6-9 */
+  -webkit-box-shadow: 0 0 8px rgba(82, 168, 236, 0.6);
   box-shadow: 0 0 8px rgba(82, 168, 236, 0.6); }
 
 .docs-pointer {
