[YLI-156]: Made view path dynamic.

--- a/openy_lily/templates/include/sidebar-search-and-menu.html.twig
+++ b/openy_lily/templates/include/sidebar-search-and-menu.html.twig
@@ -6,7 +6,7 @@
 #}
 
 <div id="search-box" class="hidden-xs">
-  <form method="get" action="{{ url('<front>') }}/search">
+  <form method="get" action="{{ search_view_content_path }}">
     <div class="form-group col-xs-12">
       <div class="input-group">
         <input type="text" name="search" class="form-control">
