--- a/openy_lily/templates/menu/menu--main.html.twig
+++ b/openy_lily/templates/menu/menu--main.html.twig
@@ -41,7 +41,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" href="{{ item.url }}">
               {{ item.title }}
               {#<b class="caret"></b>#}
-              <i class="fa fa-caret-down" aria-hidden="true"></i>
+              <i class="fa fa-chevron-down" aria-hidden="true"></i>
             </a>
             {{ menus.menu_links_level_2(item.below, attributes, menu_level + 1) }}
           {% else %}
