--- a/openy_lily/sass/misc/_header.scss
+++ b/openy_lily/sass/misc/_header.scss
@@ -57,16 +57,49 @@ header {
             float: none;
             display: table-cell;
             width: 1%;
-            min-width: 11%;
+            min-width: 10%;
             > a {
-              padding: 21px 5px;
+              padding: 21px 0px;
               i {
                 font-size: 12px;
                 margin-left: 5px;
               }
               &.expanded-menu,
               &:hover {
-                background: rgba(255,255,255,0.18);
+                background: rgba(255, 255, 255, 0.18);
+              }
+            }
+            &.menu-icon-1 {
+              a {
+                &:after {
+                  font-family: 'Glyphicons Halflings';
+                  font-style: normal;
+                  font-weight: 400;
+                  color: white;
+                  line-height: 1;
+                  -webkit-font-smoothing: antialiased;
+                  content: "\e021";
+                  vertical-align: bottom;
+                  position: absolute;
+                  top: -37px;
+                  left: 0;
+                  @include breakpoint ($desktop) {
+                    display: none;
+                  }
+                }
+              }
+              @media screen and (max-width: $desktop) {
+                min-width: 3%;
+                display: inline-block;
+                float: left;
+                position: relative;
+                overflow: hidden;
+                padding-top: 62px;
+                height: 62px;
+                padding-left: 6px;
+                &:hover {
+                  background: rgba(255, 255, 255, 0.18);
+                }
               }
             }
           }
@@ -78,10 +111,10 @@ header {
           text-align: center;
         }
         &.row-level-2 {
-          background: rgba(255,255,255,0.98);
+          background: rgba(255, 255, 255, 0.98);
           padding-top: 14px;
           padding-bottom: 14px;
-          border: 1px solid rgba(0,0,0,0.15);
+          border: 1px solid rgba(0, 0, 0, 0.15);
           box-shadow: none;
           border-radius: 0;
           li {
@@ -155,7 +188,7 @@ header {
       #block-openy-lily-main-menu {
         .nav-level-2 {
           > a {
-            padding: 16px 5px;
+            padding: 21px 0px;
           }
         }
       }
