--- a/docroot/modules/custom/ymca_groupex/templates/groupex-schedule-day.html.twig
+++ b/docroot/modules/custom/ymca_groupex/templates/groupex-schedule-day.html.twig
@@ -21,7 +21,7 @@
               <div class="col-sm-12">
                 <h3>
                   {% if pdf_href is not null %}
-                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ pdf_href }}">{{ 'View This Week’s PDF'|t }}</a>
+                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ pdf_href }}">{{ 'Download PDF'|t }}</a>
                   {% endif %}
                   <span class="result-name">{{ title }}</span>
                 </h3>
