--- a/docroot/modules/custom/ymca_groupex/templates/groupex-schedule-table-location.html.twig
+++ b/docroot/modules/custom/ymca_groupex/templates/groupex-schedule-table-location.html.twig
@@ -46,7 +46,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <h3>
-                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ items.pdf_href }}">{{ 'View This Week’s PDF'|t }}</a>
+                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ items.pdf_href }}">{{ 'Download PDF'|t }}</a>
                   <span class="result-name">{{ location }}</span>
                 </h3>
               </div>
