--- a/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
+++ b/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
@@ -13,6 +13,7 @@
   .yptf-kr-table {
     border-collapse: collapse;
     border-spacing: 0;
+    font-size: 14px;
   }
 
   .yptf-kr-table td {
@@ -41,6 +42,9 @@
   .yptf-kr-table .yptf-kr-lp {
     background-color: #e7d7f3;
   }
+  .yptf-kr-table .yptf-kr-second-header {
+    font-size: 12px;
+  }
 
   .kronos-messages .red {
     color: #ff0000;
@@ -49,31 +53,31 @@
 <table class="yptf-kr-table">
   <tr>
     <th rowspan="2" class="yptf-kr-white"><strong>{{ data.report_type_name }}</strong></th>
-    <th colspan="4" class="yptf-kr-purple"><strong>{{ "Personal Training Service Hours"|t }}</strong></th>
+    <th colspan="4" class="yptf-kr-purple" bgcolor="#834cad"><strong>{{ "Personal Training Service Hours"|t }}</strong></th>
   </tr>
   <tr>
-    <td class="yptf-kr-lp"><strong>{{ "Workforce"|t }}</strong> PT <br>{{ "Hours Submitted"|t }}</td>
-    <td class="yptf-kr-lp"><strong>{{ "MINDBODY"|t }}</strong><br>{{ "Reported PT Hours"|t }}<br>{{ "Booked"|t }}
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>{{ "Workforce"|t }}</strong> PT <br>{{ "Hours Submitted"|t }}</td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>{{ "MINDBODY"|t }}</strong><br>{{ "Reported PT Hours"|t }}<br>{{ "Booked"|t }}
     </td>
-    <td class="yptf-kr-lp"><strong>{{ "Variance"|t }}</strong></td>
-    <td class="yptf-kr-lp"><strong>{{ "Historical Hours"|t }}</strong><br>{{ "Corrected time"|t }}
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>{{ "Variance"|t }}</strong></td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>{{ "Historical Hours"|t }}</strong><br>{{ "Corrected time"|t }}
       <br>{{ "from past report"|t }}</td>
   </tr>
   {% for key, row in data.rows %}
     <tr>
       <td class="yptf-kr-white">{{ row.name }}</td>
-      <td class="yptf-kr-lp">{{ row.wf_hours }}</td>
-      <td class="yptf-kr-lp">{{ row.mb_hours }}</td>
-      <td class="yptf-kr-lp">{{ row.variance }}</td>
-      <td class="yptf-kr-lp">{{ row.historical_hours }}</td>
+      <td class="yptf-kr-lp" bgcolor="#e7d7f3">{{ row.wf_hours }}</td>
+      <td class="yptf-kr-lp" bgcolor="#e7d7f3">{{ row.mb_hours }}</td>
+      <td class="yptf-kr-lp" bgcolor="#e7d7f3">{{ row.variance }}</td>
+      <td class="yptf-kr-lp" bgcolor="#e7d7f3">{{ row.historical_hours }}</td>
     </tr>
   {% endfor %}
   <tr>
     <td class="yptf-kr-white"><strong>{{ data.summary.name }}</strong></td>
-    <td class="yptf-kr-lp"><strong>{{ data.summary.wf_hours }}</strong></td>
-    <td class="yptf-kr-lp"><strong>{{ data.summary.mb_hours }}</strong></td>
-    <td class="yptf-kr-lp"><strong>{{ data.summary.variance }}</strong></td>
-    <td class="yptf-kr-lp"><strong>{{ data.summary.historical_hours }}</td>
+    <td class="yptf-kr-lp" bgcolor="#e7d7f3"><strong>{{ data.summary.wf_hours }}</strong></td>
+    <td class="yptf-kr-lp" bgcolor="#e7d7f3"><strong>{{ data.summary.mb_hours }}</strong></td>
+    <td class="yptf-kr-lp" bgcolor="#e7d7f3"><strong>{{ data.summary.variance }}</strong></td>
+    <td class="yptf-kr-lp" bgcolor="#e7d7f3"><strong>{{ data.summary.historical_hours }}</td>
   </tr>
 </table>
 <div class="kronos-messages">
@@ -87,6 +91,6 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact the FFW team if you require assistance."|t }}</p>
+    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact the <a href='mailto:@admin_mail' target='_top'>@admin_mail</a> if you require assistance."|t({ '@admin_mail': data.admin_mail}) }}</p>
   {% endif %}
 </div>
