--- a/openy_lily/sass/style.scss
+++ b/openy_lily/sass/style.scss
@@ -6,6 +6,7 @@
 @import 'global/fonts';
 @import 'global/transition';
 
+@import 'misc/settings';
 @import 'misc/toolbar';
 @import 'misc/header';
 @import 'misc/footer';
