--- a/openy_lily/templates/page/page--search.html.twig
+++ b/openy_lily/templates/page/page--search.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
   <section class="page-heading black-header page-title title-only">
     <div class="container-fluid">
-      <h1>Search Results</h1>
+      <h1>{{ 'Search Results'|t }}</h1>
     </div>
   </section>
   {{ page.content }}
