--- a/openy_lily/sass/misc/_search.scss
+++ b/openy_lily/sass/misc/_search.scss
@@ -96,6 +96,9 @@ body.path-search {
   @include breakpoint($desktop) {
     padding: 40px 100px;
   }
+  .views-exposed-form {
+    display: none;
+  }
   .views-row {
     padding: 15px 0;
     max-width: 430px;
