--- a/openy_lily/sass/misc/_settings.scss
+++ b/openy_lily/sass/misc/_settings.scss
@@ -4,6 +4,7 @@
     padding: 0 100px;
   }
 }
+
 .page-heading {
   padding: 30px 0;
   &.black-header {
@@ -15,6 +16,12 @@
       text-transform: uppercase;
       font-family:'Cachet';
       font-weight: bold;
+    }
+  }
+  @include breakpoint(0 $tablet) {
+    padding: 20px 0;
+    h1 {
+      font-size: 24px !important;
     }
   }
 }
