[YPTF-263]: utilize admin mails.

--- a/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
+++ b/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
@@ -57,6 +57,6 @@
         {% endfor %}
       </p>
     {% endfor %}
-    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact the <a href='mailto:@admin_mail' target='_top'>@admin_mail</a> if you require assistance."|t({ '@admin_mail': data.admin_mail}) }}</p>
+    <p>{{ "To resolve, please check Kronos Workforce Central for accurate employee ID and update the 'Staff ID' field in MINDBODY. Contact the @admin_mail if you require assistance."|t({ '@admin_mail': data.admin_mail}) }}</p>
   {% endif %}
 </div>
