[YGH-524] Program Registration Theming

--- a/membership.scss
+++ b/membership.scss
@@ -269,7 +269,7 @@
           margin: 0;
           position: absolute;
           left: 0;
-          top: 0;
+          top: 3px;
           vertical-align: top;
         }
       }
