--- a/templates/groupex-schedule-week.html.twig
+++ b/templates/groupex-schedule-week.html.twig
@@ -51,7 +51,7 @@
               <div class="col-sm-12">
                 <h3>
                   {% if pdf_href is not null %}
-                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ pdf_href }}">{{ 'View This Week’s PDF'|t }}</a>
+                  <a class="btn btn-default pull-right btn-xs pdf-link" href="{{ pdf_href }}">{{ 'Download PDF'|t }}</a>
                   {% endif %}
                   <span class="result-date">{{ day }}</span>
                 </h3>
