[YLI-164]: Styling of paragraph type Banner.

--- a/openy_lily/sass/global/_colors.scss
+++ b/openy_lily/sass/global/_colors.scss
@@ -62,6 +62,7 @@ $grey24: #dbdbdb;
 
 $black2: #1d1d1b;
 $black3: #434343;
+$black4: #3d3d3d;
 
 $light-pink: #f4d1e8;
 $pale-blue: #84d8f8;
@@ -131,3 +132,9 @@ $sky-blue: #dbf5ff;
 // Mud
 
 $mud: #423e39;
+
+$blue: #428bca;
+$gray: #a8a8a8;
+$gray-light: #f8f8f8;
+$gray-dark: #777777;
+$pink: #9c1f7b;
