--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -1406,10 +1406,10 @@ body .ajax-progress-throbber .throbber {
 }
 .sports-promo.container .row .sports-icon {
   text-align: left;
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .sports-promo.container .row .description {
-  color: #c6188b;
+  color: #9c1f7b;
   font-size: 18px;
   margin-top: 20px;
 }
@@ -1440,7 +1440,7 @@ body .ajax-progress-throbber .throbber {
 }
 .session_schedules .container .row h2 {
   text-align: center;
-  color: #c6188b;
+  color: #9c1f7b;
   margin: 0 0 80px;
 }
 @media screen and (max-width: 767px) {
@@ -1496,10 +1496,10 @@ body .ajax-progress-throbber .throbber {
   margin: 0;
 }
 .session_schedules .columns .register-date {
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .session_schedules .columns .register-date p {
-  color: #c6188b;
+  color: #9c1f7b;
   margin: 0;
 }
 
@@ -1570,11 +1570,11 @@ body .ajax-progress-throbber .throbber {
   margin: 0;
 }
 .clinics_schedule .container .row .columns .date {
-  color: #c6188b;
+  color: #9c1f7b;
   font-size: 18px;
 }
 .clinics_schedule .container .row .columns .date p {
-  color: #c6188b;
+  color: #9c1f7b;
   margin: 0;
 }
 .clinics_schedule .container .row .columns .img-wrapper img {
@@ -1589,6 +1589,29 @@ body .ajax-progress-throbber .throbber {
 .internal-template.node--type-article #carousel .even-heights .active.item {
   min-height: 300px;
   max-height: 500px;
+}
+
+.pink-button, #banner .banner-caption a {
+  margin: 0;
+  border: 0;
+  color: white;
+  display: inline-block;
+  background-color: #9c1f7b;
+  background-image: -webkit-linear-gradient(#b92f9e, transparent);
+  background-image: -moz-linear-gradient(#b92f9e, transparent);
+  background-image: -ms-linear-gradient(#b92f9e, transparent);
+  background-image: linear-gradient(#b92f9e, rgba(0, 0, 0, 0));
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Cachet',Helvetica,Arial,sans-serif;
+  border-radius: 3px;
+  line-height: 1.33;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
 }
 
 .form-item {
@@ -1677,7 +1700,7 @@ body .ajax-progress-throbber .throbber {
 #mindbody-pt-form-wrapper .header-row .choice {
   font-size: 15px;
   font-size: 1.5rem;
-  color: #c6188b;
+  color: #9c1f7b;
   vertical-align: middle;
 }
 #mindbody-pt-form-wrapper .header-row .change {
@@ -1932,8 +1955,8 @@ body .ajax-progress-throbber .throbber {
   vertical-align: middle;
 }
 #mindbody-pt-form-wrapper .form-item-mb-session-type.checked .inner {
-  background-color: #c6188b;
-  border-color: #c6188b;
+  background-color: #9c1f7b;
+  border-color: #9c1f7b;
   color: #fff;
 }
 #mindbody-pt-form-wrapper #trainer-wrapper {
@@ -2274,7 +2297,7 @@ body .ajax-progress-throbber .throbber {
   }
 }
 .mindbody-search-results-header .item {
-  color: #c6188b;
+  color: #9c1f7b;
   font-size: 15px;
   margin-bottom: 20px;
   line-height: 25px;
@@ -2735,8 +2758,8 @@ body .ajax-progress-throbber .throbber {
   }
 }
 .groupex-form-full #location-wrapper .form-group.checked .inner {
-  background-color: #c6188b;
-  border-color: #c6188b;
+  background-color: #9c1f7b;
+  border-color: #9c1f7b;
   color: #fff;
 }
 .groupex-form-full #location-wrapper .form-group.checked .icon {
@@ -2830,14 +2853,14 @@ body .ajax-progress-throbber .throbber {
 }
 .groupex-results table td.instructor .icon-loop2 {
   font-size: 10px;
-  color: #c6188b;
+  color: #9c1f7b;
   margin-right: 5px;
   margin-left: 24px;
   font-weight: bold;
 }
 .groupex-results table td.instructor .sub {
   font-size: 12px;
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .groupex-results table tr:nth-child(even) td {
   background-color: #fefefe;
@@ -2986,10 +3009,10 @@ body.node--type-location #groupex-full-form-wrapper #date-select-wrapper {
 }
 .template_youth_sports_overview .locations-lead-copy .breadcrumb-container .breadcrumb > li + li:before {
   content: "|";
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .template_youth_sports_overview .locations-lead-copy .breadcrumb-container .breadcrumb a {
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .template_youth_sports_overview .locations-lead-copy h1 {
   color: #383838;
@@ -3293,10 +3316,10 @@ a.sports-icon.floor-hockey {
 }
 .template_youth_sports_inner .locations-lead-copy .breadcrumb-container .breadcrumb > li + li:before {
   content: "|";
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .template_youth_sports_inner .locations-lead-copy .breadcrumb-container .breadcrumb a {
-  color: #c6188b;
+  color: #9c1f7b;
 }
 .template_youth_sports_inner .locations-lead-copy h1 {
   color: #383838;
@@ -3678,7 +3701,7 @@ a.sports-icon.floor-hockey {
 }
 .paragraph--type--gallery-cta-content .cta-group-wrapper .cta-group h1 {
   margin: 0;
-  color: #c6188b;
+  color: #9c1f7b;
   font-size: 32px;
 }
 @media (min-width: 48em) {
@@ -3857,6 +3880,116 @@ a.sports-icon.floor-hockey {
 .paragraph--type--gallery-cta .carousel .carousel-inner > .item a img {
   height: auto;
   width: 100%;
+}
+
+#banner {
+  position: relative;
+  height: 455px;
+}
+@media (min-width: 0) and (max-width: 62em) {
+  #banner {
+    height: auto;
+  }
+}
+#banner:before {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  z-index: 4;
+  display: block;
+  visibility: visible;
+  width: 66%;
+  height: 455px;
+  background: #434343;
+  content: '';
+  -webkit-transform: skew(-20deg);
+  -moz-transform: skew(-20deg);
+  -ms-transform: skew(-20deg);
+  transform: skew(-20deg);
+}
+@media (min-width: 75em) {
+  #banner:before {
+    left: 55%;
+  }
+}
+@media (min-width: 0) and (max-width: 62em) {
+  #banner:before {
+    display: none;
+  }
+}
+#banner .banner-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
+  height: 455px;
+  background-position: center top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (min-width: 0) and (max-width: 48em) {
+  #banner .banner-img-mobile {
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: -20%;
+    max-width: none;
+    width: 140%;
+  }
+}
+#banner .banner-caption {
+  color: white;
+  z-index: 5;
+  padding-top: 80px;
+  min-height: 435px;
+  position: relative;
+  right: auto !important;
+  bottom: auto;
+  left: auto !important;
+  margin-right: 100px;
+  margin-bottom: 20px;
+  margin-left: -20%;
+  text-align: right;
+}
+#banner .banner-caption h1 {
+  font-size: 48px;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 1.1em;
+  margin: 20px 0 10px;
+  font-family: 'Cachet';
+}
+#banner .banner-caption p {
+  text-align: right;
+  font-size: 20px;
+  margin: 0 0 10px;
+}
+#banner .banner-caption a {
+  padding: 15px 35px !important;
+  font-size: 20px !important;
+  margin-top: 20px;
+}
+@media (min-width: 0) and (max-width: 62em) {
+  #banner .banner-caption {
+    text-align: center;
+    width: 100%;
+    position: static;
+    padding: 10px 30px 60px;
+    background: #3d3d3d;
+    margin: 0;
+    min-height: 100px;
+  }
+  #banner .banner-caption h1 {
+    font-size: 40px;
+  }
+  #banner .banner-caption p {
+    text-align: center;
+  }
+}
+@media (min-width: 0) and (max-width: 48em) {
+  #banner .banner-caption h1 {
+    font-size: 20px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
