--- a/openy_lily/css/style.css
+++ b/openy_lily/css/style.css
@@ -3916,6 +3916,31 @@ a.sports-icon.floor-hockey {
   width: 100%;
 }
 
+.text-banner h1 {
+  font-size: 48px;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 1.1em;
+  margin: 20px 0 10px;
+  color: white;
+  font-family: 'Cachet';
+}
+@media (min-width: 0) and (max-width: 62em) {
+  .text-banner h1 {
+    font-size: 40px;
+  }
+}
+@media (min-width: 0) and (max-width: 48em) {
+  .text-banner h1 {
+    font-size: 20px;
+  }
+}
+.text-banner p {
+  font-size: 20px;
+  margin: 0 0 10px;
+  color: white;
+}
+
 #banner {
   position: relative;
   height: 455px;
@@ -3985,18 +4010,8 @@ a.sports-icon.floor-hockey {
   margin-left: -20%;
   text-align: right;
 }
-#banner .banner-caption h1 {
-  font-size: 48px;
-  text-transform: uppercase;
-  font-weight: bold;
-  line-height: 1.1em;
-  margin: 20px 0 10px;
-  font-family: 'Cachet';
-}
 #banner .banner-caption p {
   text-align: right;
-  font-size: 20px;
-  margin: 0 0 10px;
 }
 #banner .banner-caption a {
   padding: 15px 35px !important;
@@ -4024,6 +4039,86 @@ a.sports-icon.floor-hockey {
   #banner .banner-caption h1 {
     font-size: 20px;
   }
+}
+
+#small-text-banner {
+  position: relative;
+  min-height: 200px;
+}
+@media (min-width: 0) and (max-width: 48em) {
+  #small-text-banner {
+    height: auto;
+  }
+  #small-text-banner .container-fluid {
+    padding: 0 15px;
+  }
+}
+#small-text-banner:before {
+  position: absolute;
+  top: 0;
+  left: -21%;
+  z-index: 2;
+  width: 80%;
+  height: 100%;
+  background: #434343;
+  content: '';
+  -webkit-transform: skew(20deg);
+  -moz-transform: skew(20deg);
+  -ms-transform: skew(20deg);
+  transform: skew(20deg);
+}
+@media (min-width: 0) and (max-width: 48em) {
+  #small-text-banner:before {
+    display: none;
+  }
+}
+#small-text-banner .header-copy {
+  z-index: 3;
+  background: #434343;
+}
+#small-text-banner .header-copy .banner-copy {
+  padding: 30px 0;
+  z-index: 3;
+}
+#small-text-banner .header-copy .banner-copy h1 {
+  color: white;
+  margin-top: 0;
+}
+@media (min-width: 0) and (max-width: 62em) {
+  #small-text-banner .header-copy .banner-copy h1 {
+    font-size: 48px;
+  }
+}
+#small-text-banner .header-copy .banner-copy p {
+  font-size: 24px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+#small-text-banner .header-image {
+  z-index: 1;
+  height: 100%;
+  position: absolute;
+  left: 50%;
+  padding-right: 30px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (min-width: 75em) {
+  #small-text-banner .header-image {
+    padding-right: 100px;
+  }
+}
+@media (min-width: 0) and (max-width: 48em) {
+  #small-text-banner .header-image {
+    background-image: none !important;
+    position: static;
+    width: 100%;
+    padding: 0;
+  }
+}
+#small-text-banner .header-image figure {
+  overflow: hidden;
+  margin: 0 -30px 0 -20px;
 }
 
 /*# sourceMappingURL=style.css.map */
