--- a/themes/openy_themes/openy_rose/css/colors.css
+++ b/themes/openy_themes/openy_rose/css/colors.css
@@ -113,6 +113,7 @@ a,
 .paragraph.featured-content .locations-list h2.description,
 [class*="sidebar"] .node--type-facility.node--view-mode-teaser h2 a,
 [class*="sidebar"] .node--type-branch.node--view-mode-teaser h2 a,
+[class*="sidebar"] .node--type-branch.node--view-mode-class-location h2 a,
 [class*="sidebar"] .node--type-camp.node--view-mode-teaser h2 a,
 .node--type-blog.node--view-mode-teaser.blog-story .inner-wrapper h2,
 .node--type-blog.node--view-mode-teaser.blog-story .inner-wrapper h4,
