--- a/themes/openy_themes/openy_rose/scss/modules/_branch.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_branch.scss
@@ -853,6 +853,7 @@ html.js {
 
 .node--type-facility.node--view-mode-teaser,
 .node--type-branch.node--view-mode-teaser,
+.node--type-branch.node--view-mode-class-location,
 .node--type-camp.node--view-mode-teaser {
   border: solid 1px $light-grey;
   padding: 20px;
