[YGH-549] Add top margin to testimonial form

--- a/modules/testimonials.scss
+++ b/modules/testimonials.scss
@@ -1,5 +1,7 @@
 .node-testimonial-form,
 .node-testimonial-edit-form {
+  margin: 20px 0;
+
   .field--type-language,
   .vertical-tabs,
   .filter-wrapper {
